Converted to Angular App

--- a/mongoClass/html/todo.html
+++ b/mongoClass/html/todo.html
@@ -3,8 +3,7 @@
 <head>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="angular.min.js"></script>
-    <script src="todos.controller.js"></script>
-<!--    <script src="todosForm.js"></script>-->
+    <script src="todo.controller.js"></script>
 </head>
 <body ng-app="myApp"  ng-controller="TodosController">
     <h1>Add a Todo</h1>
