--- a/mongoCreative/html/todo.html
+++ b/mongoCreative/html/todo.html
@@ -13,7 +13,7 @@
       todo: <input type="text" id="Todo" value="Hello"><br>
     </form>
     <button ng-click="postTodo()">Make a Todo</button>
-    <button ng-click="getUsersTodo()">Make a Todo</button>
+    <button ng-click="getUsersTodo()">Show Todos for this user</button>
 
     <div id="json"></div>
     <h3>Current todos:</h3>
